[ADD] UnaMKR Mini docs

--- a/docs/39.1-Modem.md
+++ b/docs/39.1-Modem.md
@@ -1,32 +1,10 @@
-# UnaMKR Mini Modem Mode
+# UnaMKR Mini AT Commnad Reference
 
-The following tutorials will guide you through how to setup the software development environment and everything you need to start with your IoT projects.
+This document describes the list of AT commands that can be used on UnaMKR mini.
 
-# Prerequisites
-
-*   UnaMKR set to Modem mode (check [UnaMKR Operating Modes](20-Modes?id=switching-mode))
-*   A Micro USB cable
-
-# Connection settings
-
-| Setting | Value
-|---|:---:
-| Baud Rate | 115200
-| Data Bits | 8
-| Parity | None
-| Stop Bits | 1
-| Flow Control | None
-| Local Echo<br/>(recommanded) | Enabled
-
-# Connection testing
-
-* Sending `AT?` should produce an `OK` reply
-
-
-# AT commands reference table
+## AT commands reference table
 
 * Commands must be terminated with `\r\n` character sequence
-
 
 <table>
   <tr>
