[ADD] UnaMKR new AT command

--- a/docs/39.1-Modem.md
+++ b/docs/39.1-Modem.md
@@ -455,6 +455,21 @@ Response: OK
    <td>
    </td>
   </tr>
+    <tr>
+   <td>26
+   </td>
+   <td>Get monarch information
+   </td>
+   <td>Get result of monarch detection.
+   </td>
+   <td>AT$MONARCH?
+   </td>
+   <td>(RC),(RSSI)
+   </td>
+   <td>The response 1,-67 means that the monarch result is RC1 with RSSI -67 dbm </br>
+  The response 0,0 means that the detection was failed.
+   </td>
+  </tr>
 </table>
 
 
