--- a/docs/10.1-Hardware.md
+++ b/docs/10.1-Hardware.md
@@ -47,11 +47,11 @@ This part of the documentation is a representation of the UnaMKR onboard compone
 
 - Power Supply: From 2.1V to 3.6V
 - Power Consumption:
-`121mA Tx at 22dBm (peak current with Sigfox packet transmission) `
-`33mA Tx at 14dBm (peak current with Sigfox packet transmission) `
-`31mA Tx at 13dBm (peak current with Sigfox packet transmission) `
-`22mA Tx at 4dBm with BT packet transmission `
-`6.17uA at sleep mode`
+121mA Tx at 22dBm (peak current with Sigfox packet transmission)
+33mA Tx at 14dBm (peak current with Sigfox packet transmission)
+31mA Tx at 13dBm (peak current with Sigfox packet transmission)
+22mA Tx at 4dBm with BT packet transmission
+6.17uA at sleep mode
 
 
 ## Antenna Connectors
