--- a/docs/10.1-Hardware.md
+++ b/docs/10.1-Hardware.md
@@ -45,6 +45,7 @@ This part of the documentation is a representation of the UnaMKR onboard compone
 | 31 | GND |   | GND |
 | 32 | 3V3 |   | 3V3 |
 
+## Electrical characteristics
 - Power Supply: From 2.1V to 3.6V
 - Power Consumption:
 	- 121mA Tx at 22dBm (peak current with Sigfox packet transmission) 
